--- a/_posts/2025-01-11-first.md
+++ b/_posts/2025-01-11-first.md
@@ -6,3 +6,5 @@ title:  "첫 포스팅 입니다. 설레네요"
 # 오늘 처음 블로그를 만들었어요.
 
 앞으로 열심히 해보겠습니다.
+
+![Golden_State_Worriors](../images/2025-01-11-first/Golden_State_Worriors.jpg)
